--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,10 @@
         "es2015",
         "stage-2"
     ],
-    "plugins": []
+    "plugins": [[ "component", [
+            {
+                "libraryName": "element-ui",
+                "styleLibraryName": "theme-default"
+            }
+        ]]]
 }
