--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "admin-lte": "^2.3.11",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^0.10.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.5",
+    "element-ui": "^1.4.3",
     "file-loader": "^0.11.2",
     "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^2.30.1",
