--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "url-loader": "^0.5.9",
     "vue": "^2.4.2",
     "vue-loader": "^13.0.4",
+    "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.4.2",
     "vuex": "^2.3.1",
     "webpack": "^3.5.5",
